--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,17 +18,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      
-      - name: Setup dotnet
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: |
-            8.0.x
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Run, test and shutdown 
-        run:  (sleep 5 && echo "this is after sleeping 5 seconds, printed at $(date)") & echo "this is async, printed at $(date)"
+    - name: Run API
+      run: 
+        dotnet run &
+
+    - name: Wait for API to start
+      run: sleep 20 
+
+    - name: Stop API
+      run: 
+        kill -9 $(lsof -t -i:5000)
         
 
   
