--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Run and stop API
-      run: cd api && dotnet run & (sleep 20  kill -9 $(lsof -t -i:5000))
+      run: cd api && dotnet run & (sleep 20  && kill -9 $(lsof -t -i:5000))
       env: 
         pgconn: ${{secrets.PGCONN}}
 
