--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -22,7 +22,8 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Run and stop API
-      run: cd api && dotnet run & (sleep 20  && kill -9 $(lsof -t -i:5000))
+      run: |
+          cd api && dotnet run & sleep 20 && (kill -9 $(lsof -t -i:5000))
       env: 
         pgconn: ${{secrets.PGCONN}}
 
