--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,14 +18,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Setup dotnet
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: |
+            7.0.x
 
-    - name: Run and stop API
-      run: |
+      - name: Run and stop API
+        run: |
           cd api && dotnet run & sleep 20 && (kill -9 $(lsof -t -i:5000))
-      env: 
-        pgconn: ${{secrets.PGCONN}}
+          env: 
+          pgconn: ${{secrets.PGCONN}}
 
   
        
